k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emergency-call-center
  labels:
    name: emergency-call-center
    app: call-center
